[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Logo.gd" type="Script" id=1]
[ext_resource path="res://Other/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Background.gd" type="Script" id=3]
[ext_resource path="res://logo.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Controls.gd" type="Script" id=5]
[ext_resource path="res://Scripts/StartGame.gd" type="Script" id=6]
[ext_resource path="res://Scripts/ControlsButton.gd" type="Script" id=7]
[ext_resource path="res://Scripts/ControlsBack.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Highscore Button.gd" type="Script" id=9]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/8-bit-pusab.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = SubResource( 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.0232558, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )
width = 1

[node name="Main" type="Node2D"]

[node name="StartGame" type="Button" parent="."]
margin_left = 50.0
margin_top = 324.0
margin_right = 462.0
margin_bottom = 474.0
hint_tooltip = "Press to start the game"
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 2 )
action_mode = 0
text = "Start Game!"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsBack" type="Button" parent="."]
visible = false
margin_left = 200.0
margin_top = 400.0
margin_right = 824.0
margin_bottom = 550.0
hint_tooltip = "Press to go back to main menu"
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 2 )
action_mode = 0
text = "Back"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" type="Button" parent="."]
margin_left = 562.0
margin_top = 324.0
margin_right = 974.0
margin_bottom = 474.0
hint_tooltip = "Press for Controls"
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 2 )
action_mode = 0
text = "Controls"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Label" parent="."]
visible = false
anchor_right = 0.252
margin_right = 1024.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 2 )
text = "Controls:
Space, Click or Tab on a touchscreen will accelerate the bike.
Ctrl or the restart button on mobile will restart the level."
align = 1
autowrap = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 512, 210 )
scale = Vector2( 10, 10 )
z_index = -1
texture = ExtResource( 4 )
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 296.104 )
scale = Vector2( 1024, 600 )
z_index = -2
texture = SubResource( 4 )
script = ExtResource( 3 )

[node name="Highscore" type="Button" parent="."]
margin_left = 137.5
margin_top = 485.0
margin_right = 886.5
margin_bottom = 585.0
custom_fonts/font = ExtResource( 2 )
text = "High Scores"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartGame" to="StartGame" method="_on_StartGame_pressed"]
[connection signal="pressed" from="ControlsBack" to="ControlsBack" method="_on_ControlsBack_pressed"]
[connection signal="pressed" from="ControlsButton" to="ControlsButton" method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="Highscore" to="Highscore" method="_on_Highscore_pressed"]
